# ntp-clock

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  justfile
.cargo/: config.toml
.github/: CONTRIBUTING.md
.github/workflows/: clippy.yml  rust_test.yml
ntp-clock/: Cargo.toml
ntp-clock-hardware/: Cargo.toml  README.md  build.rs  memory.x
ntp-clock-hardware/scripts/: download-firmware.sh  flash-pico.sh  hardware-build.sh  hardware-flash.sh  screen.sh
ntp-clock-hardware/src/: constants.rs  hardware.rs  lib.rs  main.rs  usb.rs
ntp-clock/src/: cli.rs  clock.rs  constants.rs  error.rs  lib.rs  main.rs  packets.rs  prelude.rs
ntp-clock/tests/: live_ntp.rs  tests.rs
src/: cli.rs  clock.rs  lib.rs  main.rs  prelude.rs
tests/: live_ntp.rs  tests.rs
