[package]
name = "ntp-clock"
version = { workspace = true }
edition = { workspace = true }

[workspace]
members = ["ntp-clock-hardware"]

[workspace.package]
version = "0.0.1"
edition = "2024"


[features]
default = ["std", "cli"]
std = []
cli = ["std", "clap", "simple_logger"]

[dependencies]
simple_logger = { version = "5.1.0", optional = true }
clap = { version = "4.5.54", features = ["derive", "env"], optional = true }
log = "0.4.29"
