
[workspace]
members = ["ntp-clock", "ntp-clock-hardware"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["James Hodgkinson"]

[workspace.dependencies]
heapless = { version = "0.9.2", default-features = false }
log = { version = "0.4.29", default-features = false }
packed_struct = { version = "0.10.1", default-features = false }
