[package]
name = "ntp-clock-hardware"
version = { workspace = true }
edition = { workspace = true }

[features]
default = []
hardware = [
    "embassy-rp",
    "cyw43",
    "cyw43-pio",
    "rp235x-hal",
    "panic-halt",
    "smoltcp",
    "rp-pac",
    "embedded-hal",
    "embedded-alloc",
    "embassy-executor",
    "embassy-net",
    "embassy-time",
    "embassy-time-queue-utils",
    "static_cell",
    "fixed",
]

[[bin]]
name = "ntp-clock-hardware"
path = "src/main.rs"
required-features = ["hardware"]

[dependencies]
ntp-clock = { path = "..", default-features = false }
cyw43 = { version = "0.6.0", optional = true }
cyw43-pio = { version = "0.9.0", optional = true }
rp235x-hal = { version = "0.3.0", features = [
    "binary-info",
    "critical-section-impl",
    "rt",
], optional = true }

panic-halt = { version = "1.0.0", optional = true }
log = "0.4.29"
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-udp",
    "socket-dhcpv4",
], optional = true }


rp-pac = { version = "7.0.0", features = ["rp235x", "rt"], optional = true }
embedded-hal = { version = "1.0.0", optional = true }
embedded-alloc = { version = "0.7.0", optional = true }
embassy-rp = { version = "0.9.0", features = [
    "chrono",
    "critical-section-impl",
    "rp235xa",
    "time-driver",
], optional = true }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread"], optional = true }
embassy-net = { version = "0.8.0", optional = true, features = [
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv4",
    "udp",
] }
embassy-time = { version = "0.5.0", optional = true }
embassy-time-queue-utils = { version = "0.3.0", optional = true, features = ["generic-queue-8"] }
static_cell = { version = "2.1.0", optional = true }
fixed = { version = "1.28.0", default-features = false, optional = true }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = "0.11.1"
riscv-rt = "0.12.2"


# [target.'cfg( target_arch = "arm" )'.dependencies]
# embassy-executor = { version = "0.5", features = [
#     "arch-cortex-m",
#     "executor-thread",
# ] }

# [target.'cfg( target_arch = "riscv32" )'.dependencies]
# embassy-executor = { version = "0.5", features = [
#     "arch-riscv32",
#     "executor-thread",
# ] }
