[package]
name = "ntp-clock-hardware"
readme = "README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "ntp-clock-hardware"
path = "src/main.rs"

[dependencies]
cyw43 = { version = "0.6.0" }
cyw43-pio = { version = "0.9.0" }
log = { workspace = true }
ntp-clock = { path = "../ntp-clock", default-features = false }
rp235x-hal = { version = "0.3.0", features = [
    "binary-info",
    "critical-section-impl",
    "rt",
] }
panic-halt = { version = "1.0.0" }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-udp",
    "socket-dhcpv4",
] }
packed_struct = { workspace = true }
rp-pac = { version = "7.0.0", features = ["rp235x", "rt"] }
embedded-hal = { version = "1.0.0" }
embedded-alloc = { version = "0.7.0" }
embassy-rp = { version = "0.9.0", features = [
    "chrono",
    "critical-section-impl",
    "imagedef-secure-exe",
    "rp235xa",
    "time-driver",
] }
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-net = { version = "0.8.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv4",
    "udp",
] }
embassy-time = { version = "0.5.0" }
embassy-time-queue-utils = { version = "0.3.0", features = ["generic-queue-8"] }
embassy-sync = { version = "0.7.2" }
embassy-usb = { version = "0.5.1" }
static_cell = { version = "2.1.0" }
fixed = { version = "1.28.0", default-features = false }
heapless = { workspace = true, default-features = false }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
