
[package]
name = "ntp-clock"
version = { workspace = true }
edition = { workspace = true }
readme = "README.md"
license = { workspace = true }
authors = { workspace = true }

[features]
default = ["std"]
std = []

[dependencies]
log = { workspace = true }
packed_struct = { workspace = true }
heapless = { workspace = true, default-features = false }

[target.'cfg(any(target_family = "unix", target_family = "windows"))'.dependencies]
simple_logger = { version = "5.1.0" }
clap = { version = "4.5.54", features = ["derive", "env"] }

[dev-dependencies]
ntest = "0.9.5"
